--- a/DockerFile
+++ b/DockerFile
@@ -1,17 +1,15 @@
-# Use a imagem do SDK do .NET Core para construir o aplicativo
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-WORKDIR /app
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
+WORKDIR /App
 
-# Copie o projeto e restaure as dependências
-COPY *.csproj ./
-RUN dotnet restore
-
-# Copie o restante do código e construa o aplicativo
+# Copy everything
 COPY . ./
+# Restore as distinct layers
+RUN dotnet restore
+# Build and publish a release
 RUN dotnet publish -c Release -o out
 
-# Use a imagem do ASP.NET Core para executar o aplicativo
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS runtime
-WORKDIR /app
-COPY --from=build /app/out ./
+# Build runtime image
+FROM mcr.microsoft.com/dotnet/aspnet:8.0
+WORKDIR /App
+COPY --from=build-env /App/out .
 ENTRYPOINT ["dotnet", "DotNet.Docker.dll"]
